Thu Jun  3 18:58:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (ruby_init_ext): statically linked extensions have no
	  real path.  [ruby-dev:41526]

	* vm.c (rb_vm_call_cfunc): add filepath argument.

Thu Jun  3 18:17:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rake/test_win32.rb (Rake::TestWin32): update tests.
	  [ruby-core:30309]

	* test/io/nonblock/test_flush.rb (test_flush): try pipe and
	  socketpair.  [ruby-dev:41517]

Thu Jun  3 09:36:43 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/dl.h (DLSTACK_TYPE): type of stack is same as VALUE.
	  reported by sakiyama shin in [ruby-dev:41514]

Thu Jun  3 06:30:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_path.rb (test_path): workaround for drive
	  letter.

	* test/ruby/test_path.rb (test_path): get rid of blocking on
	  access to non-existent host.

Thu Jun  3 05:37:46 2010  Ryan Davis  <ryand-ruby@zenspider.com>

	* tool/rbinstall.rb (install-bin): Allow bin/* install from dot-dirs.
	  Fixes rvm and multiruby installations.

Thu Jun  3 01:22:45 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fix typo and race condition.

Thu Jun  3 00:58:45 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/dl/lib/dl/cparser.rb (parse_ctype): add backwards compatibility
	  by supporting "uint" types in the c parser. [ruby-core:29750]
	* test/dl/test_cparser.rb: adding a test for "uint" changes.

Wed Jun  2 11:40:02 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* compile.c (iseq_compile_each): should consider block on stack,
	  if block argument is passed.  [ruby-core:30534]

	* parse.c (arg_concat_gen): should append to nd_head, not to
	  nd_iter for NODE_BLOCK_PASS.

Tue Jun  1 23:12:06 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (unescape_nonascii): \P{FOO} is also Unicode property in
	  regexp. [ruby-core:30540]

Tue Jun  1 21:29:39 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb: adding support to rfc5789 patch verb.